--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "aos": "^2.3.4",
     "next": "12.2.5",
     "next-i18next": "^12.0.1",
     "react": "18.2.0",
