--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/aos": "^3.0.4",
     "aos": "^2.3.4",
     "next": "12.2.5",
     "next-i18next": "^12.0.1",
@@ -17,10 +18,12 @@
     "react-icons": "^4.4.0"
   },
   "devDependencies": {
+    "@types/node": "^18.11.17",
     "autoprefixer": "^10.4.8",
     "eslint": "8.23.0",
     "eslint-config-next": "12.2.5",
     "postcss": "^8.4.16",
-    "tailwindcss": "^3.1.8"
+    "tailwindcss": "^3.1.8",
+    "typescript": "^4.9.4"
   }
 }
