--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "@types/aos": "^3.0.4",
+    "@types/react-icons": "^3.0.0",
     "aos": "^2.3.4",
     "next": "12.2.5",
     "next-i18next": "^12.0.1",
+    "next-themes": "^0.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0"
